--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "@thirdweb-dev/sdk": "^4.0.99",
+    "axios": "^1.13.2",
     "body-parser": "^2.2.1",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "ethers": "^5.8.0",
