--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@thirdweb-dev/sdk": "^4.0.99",
     "axios": "^1.13.2",
     "body-parser": "^2.2.1",
     "colors": "^1.4.0",
